--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,29 @@
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-jasper</artifactId>
 		</dependency>
+		
+		<dependency>
+			 <groupId>org.webjars</groupId>
+			 <artifactId>jquery</artifactId>
+			 <version>2.1.1</version>
+		 </dependency>
+		 
+		 <dependency>
+			 <groupId>org.webjars</groupId>
+			 <artifactId>bootstrap</artifactId>
+			 <version>3.2.0</version>
+		 </dependency>
+		 
+		 <dependency>
+			 <groupId>org.webjars</groupId>
+			 <artifactId>webjars-locator</artifactId>
+		 </dependency>
+		 
+		 <dependency>
+			 <groupId>org.webjars</groupId>
+			 <artifactId>font-awesome</artifactId>
+			 <version>4.7.0</version>
+		 </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
